tests/baselines/reference/reservedNameOnInterfaceImport.errors.txt
reservedNameOnInterfaceImport.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reservedNameOnInterfaceImport.ts(5,12): error TS2438: Import name cannot be 'string'.


==== reservedNameOnInterfaceImport.ts (2 errors) ====
    declare module test {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface istring { }
    
        // Should error; 'test.istring' is a type, so this import conflicts with the 'string' type.
        import string = test.istring;
               ~~~~~~
!!! error TS2438: Import name cannot be 'string'.
    }
    